Refactor index resolution to handle annotated collections
Modified `resolveIndexes` to only process collections annotated with `@Document`. This ensures index definitions are applied correctly and avoids unnecessary operations on non-annotated collections. Added a safeguard using `ArrayList` to manage index definitions.